# uuid-mcp

./: .clinerules  README.md  pyproject.toml
.codex/: setup.sh
src/uuid_mcp/: __init__.py  server.py
tests/: test_server.py
