[project]
name = "uuid-mcp"
version = "0.1.0"
description = "A simple MCP server that generates UUIDs"
authors = [
    { name = "Hayato Amemiya", email = "hayato.ame@gmail.com" }
]
dependencies = [
    "mcp>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/uuid_mcp"]
